--- a/style/rental.css
+++ b/style/rental.css
@@ -15,42 +15,82 @@ body{
     overflow: hidden;
 }
 
+
+/* Navbar container */
 .navbar {
-  width: 100%;
-  background-color: #478285;
-  height: 50px;
-  position: sticky;
   overflow: hidden;
+  background-color:var(--primary-color);
+  font-family: Arial;
 }
 
-.navbar ul {
-  height: 100%;
-}
-
-.navbar li {
+/* Links inside the navbar */
+.navbar a {
   float: left;
-  list-style: none;
-  /* margin-top: 10px; */
-  height: 100%;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
 
-.navbar li a {
-  padding: 3px 3px 3px 3px;
+/* The dropdown container */
+.dropdown {
+  float: right;
+  overflow: hidden;
   margin: 0px 1rem;
-  font-size: 20px;
+}
+
+/* Dropdown button */
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
+}
+
+/* Add a red background color to navbar links on hover */
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: var(--danger-color);
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
   text-decoration: none;
-  color: #fefbf3;
-  padding-top: 0px;
-  margin-top: 0px;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
 .brand {
   /* background-color: blue; */
   width: 100px;
-  height: 100%;
+  height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
